--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
   background-image: linear-gradient(rgba(0, 17, 16, 0.8), rgba(0, 17, 16, 0.8)),
     url(./image/laptop.jpg);
   background-size: cover;
+  background-position: center;
 }
 
 nav {
@@ -37,126 +38,120 @@ nav {
   width: 100%;
   background-color: orangered;
   color: rgb(0, 17, 16);
+  border-bottom: 1px solid #ccc;
 }
 nav .navContainer {
   width: 80%;
   height: 100%;
   margin: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding-left: 5px;
   padding-right: 15px;
 }
-nav h1 {
+nav .logo {
   font-size: 2rem;
   color: #fff;
+  width: 20%;
+  float: left;
+  line-height: 70px;
 }
-
-nav h1 span {
+nav .logo span {
   color: rgb(0, 17, 16);
 }
 
+label {
+  display: none;
+  line-height: 70px;
+  float: right;
+  font-size: 30px;
+  color: #fff;
+  clear: right;
+}
+
+#toggle {
+  display: none;
+}
+
 nav ul {
-  display: flex;
+  height: 100%;
+  float: right;
+}
+
+nav ul li {
+  display: inline;
+  line-height: 70px;
+}
+
+nav li a {
+  line-height: 70px;
   text-transform: uppercase;
   font-weight: bold;
-}
-nav ul li {
-  height: 100%;
-  position: relative;
-}
-nav ul li:not(:last-child) {
-  padding-right: 15px;
+  margin: 0 0 0 15px;
 }
 
-nav ul li::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-bottom: solid #000 1px;
-  border-top: solid #000 1px;
-  transition: 0.3s ease-in-out;
-  opacity: 0;
-  z-index: -2;
-}
-nav ul li:hover::before {
-  transform: scaleY(2);
-  opacity: 1;
+nav li a:hover {
   color: #fff;
-}
-a:hover {
-  color: #fff;
-}
-
-nav ul li a {
-  text-decoration: none;
-  color: inherit;
-  cursor: pointer;
-
   transition: 0.3s ease-in-out;
 }
 
-.smallNav {
-  position: fixed;
-  top: 70px;
-  left: 0;
-  z-index: 1000;
-  width: 100%;
+.container {
   height: 100%;
-}
-
-.smallNavContainer {
-  width: 100%;
-  height: 40%;
-  background: orangered;
-  opacity: 1;
-}
-
-.smallNav ul {
-  width: 80%;
-  height: 100%;
-  margin: auto;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
+  filter: bl;
 }
-.smallNav ul li {
-  height: 100%;
-}
-.smallNav ul li:hover {
-  background: #000;
-}
-
 .container h3 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   color: #fff;
-  font-size: 02rem;
+  font-size: 2rem;
   padding: 15px;
   background: orangered;
   border-radius: 5px;
   cursor: pointer;
 }
-
-i {
-  opacity: 0;
-}
-
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 620px) {
+  .displayNav {
+    display: block;
+  }
+  label {
+    display: block;
+    cursor: pointer;
+  }
   nav ul {
+    position: fixed;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background: orangered;
+    text-align: center;
+    z-index: 10000;
     display: none;
   }
-  i {
-    opacity: 1;
+  nav ul a {
+    position: relative;
+    width: 100%;
+    display: block;
+    border-bottom: 1px solid #ccc;
+    margin: 0;
+    z-index: 200;
   }
 
+  nav ul a::before {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background: rgb(0, 17, 16);
+    opacity: 0;
+    transition: 0.3s ease-in;
+  }
+  nav ul a:hover::before {
+    width: 100%;
+    opacity: 1;
+  }
   .container h3 {
     font-size: 1.5rem;
   }
